Adds route get by params api
