# models/route_get_by_params_request.go
@@ -1,0 +1,105 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// RouteGetByParamsRequest route get by params request
+//
+// swagger:model route.getByParamsRequest
+type RouteGetByParamsRequest struct {
+
+	// method
+	// Required: true
+	Method *string `json:"method"`
+
+	// namespace Id
+	// Required: true
+	NamespaceID *int64 `json:"namespaceId"`
+
+	// route
+	// Required: true
+	Route *string `json:"route"`
+}
+
+// Validate validates this route get by params request
+func (m *RouteGetByParamsRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateMethod(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateNamespaceID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateRoute(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *RouteGetByParamsRequest) validateMethod(formats strfmt.Registry) error {
+
+	if err := validate.Required("method", "body", m.Method); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *RouteGetByParamsRequest) validateNamespaceID(formats strfmt.Registry) error {
+
+	if err := validate.Required("namespaceId", "body", m.NamespaceID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *RouteGetByParamsRequest) validateRoute(formats strfmt.Registry) error {
+
+	if err := validate.Required("route", "body", m.Route); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this route get by params request based on context it is used
+func (m *RouteGetByParamsRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *RouteGetByParamsRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *RouteGetByParamsRequest) UnmarshalBinary(b []byte) error {
+	var res RouteGetByParamsRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
