# pkg/systemnamespace/model.go
@@ -1,6 +1,0 @@
-package systemnamespace
-
-type Pair struct {
-	SystemId int
-	NamespaceId int
-}
